--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -30,9 +30,9 @@
                         <div id="annotationZone"></div>
                         <div id="slideNavigationWrapper">
                           <div id="slideNavigationProgress"></div>
-                          <div id="slideNavigation" class="row notSelectable">
+                          <div id="slideNavigation" class="row notSelectable" ng-cloak>
                             <div class="col-md-4 text-center"></div>
-                            <div class="col-md-4 text-center"><div class="row"><span class="glyphicon glyphicon-triangle-left iconSlideNav" aria-hidden="true"></span> <span id="slideNavText" class="fsSlideNav"><%=currentPageNumber%></span><span class="glyphicon glyphicon-triangle-right iconSlideNav" aria-hidden="true"></span></div></div>
+                            <div class="col-md-4 text-center"><div class="row"><span class="glyphicon glyphicon-triangle-left iconSlideNav" aria-hidden="true" ng-click="changePageNumber(-1)"></span> <span id="slideNavText" class="fsSlideNav">{{currentPageNumber}}/{{maxPageNumber}}</span><span class="glyphicon glyphicon-triangle-right iconSlideNav" aria-hidden="true" ng-click="changePageNumber(1)"></span></div></div>
                             <div class="col-md-4 text-right"><span class="glyphicon glyphicon-fullscreen iconSlideNav" aria-hidden="true"></span></div>
                           </div>
                         </div>
