can upload video intro for a course

--- a/views/admin-lte/catalogs/addContentNodeModal.ejs
+++ b/views/admin-lte/catalogs/addContentNodeModal.ejs
@@ -31,7 +31,7 @@
                                     <div class="controls">
                                         <div class="btn btn-sm btn-default"
                                              ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
-                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='1000000'><i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file</div>
+                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='100000000'><i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file</div>
                                         &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
                                     </div>
                                 </div>
@@ -39,7 +39,7 @@
                             <div class="col-md-6" id="video">
                                 <div class="control-group">
                                     <p></p>
-                                    <label class="control-label" for="pdf">Upload Video File</label>
+                                    <label class="control-label" for="video">Upload Video File</label>
                                     <div class="controls">
                                         <div class="btn btn-sm btn-default"
                                              ngf-select accept="video/*" ngf-accept="'video/*'"
