--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -537,6 +537,22 @@ ul.dropdown-menu.course{
     left: 20px;
     z-index: 4;
 }
+.videoPlayerWrapper{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    z-index: 3000;
+}
+
+.videoPlayerWrapper .videoPlayerContainer, .center-height{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
 
 .content-header > .breadcrumb {
     display: inline;
@@ -548,6 +564,19 @@ ul.dropdown-menu.course{
 
 #courses h4 {
     font-size: 15px;
+}
+
+a.videoButton{
+    position: relative;
+    bottom: -50px;
+    left: 45%;
+    width:100px;
+    height:100px;
+    background: url(../images/playButton.png) no-repeat;
+    display: block;
+}
+a.videoButton:hover{
+    background: url(../images/playButtonHover.png) no-repeat;
 }
 
 @media screen and (max-width: 768px) {
@@ -640,6 +669,11 @@ ul.dropdown-menu.course{
     -webkit-box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
     -moz-box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
     box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
+}
+
+.excerpt .description{
+    max-height: 200px;
+    overflow: auto;
 }
 
 #preview h1 {
