--- a/views/admin-lte/catalogs/editCourseModal.ejs
+++ b/views/admin-lte/catalogs/editCourseModal.ejs
@@ -53,15 +53,38 @@
                                 </div>
                             </div>
 
-                            <div class="control-group">
-                                <p></p>
-                                <label class="control-label" for="description">Intro Picture</label>
-                                <p class="help-block">Select a jpg/png file (960 × 480 pixels) from your computer</p>
-                                <div class="controls">
-                                    <div class="btn btn-sm btn-default"
-                                         ngf-select accept="image/*" ngf-accept="'image/jpg,image/jpeg,image/png'"
-                                         ng-model="files" ngf-multiple="false" ngf-max-size='1000000'><i class="ionicons ion-image"></i> &nbsp; Select a picture</div>
-                                    &nbsp; <span ng-repeat="f in files">{{f.name}}</span>
+                            <div class="col-md-6" id="picture">
+                                <div class="control-group">
+                                    <p></p>
+                                    <label class="control-label" for="description">Intro Picture</label>
+
+                                    <p class="help-block">Select a jpg/png file (960 × 480 pixels) from your
+                                        computer</p>
+
+                                    <div class="controls">
+                                        <div class="btn btn-sm btn-default"
+                                             ngf-select accept="image/*" ngf-accept="'image/jpg,image/jpeg,image/png'"
+                                             ng-model="filespicture" ngf-multiple="false" ngf-max-size='1000000'><i
+                                                class="ionicons ion-image"></i> &nbsp; Select a picture
+                                        </div>
+                                        &nbsp; <span ng-repeat="f in filespicture">{{f.name}}</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6" id="video">
+                                <div class="control-group">
+                                    <p></p>
+                                    <label class="control-label" for="video">Upload Intro Video</label>
+                                    <p class="help-block"></p>
+                                    <div class="controls">
+                                        <div class="btn btn-sm btn-default"
+                                             ngf-select accept="video/*" ngf-accept="'video/*'"
+                                             ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i
+                                                class="`"></i> &nbsp; Select a video file
+                                        </div>
+                                        &nbsp; <span ng-repeat="f in filesvideo">{{f.name}}</span>
+                                    </div>
                                 </div>
                             </div>
 
