--- a/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
@@ -1,7 +1,6 @@
-<pre>{{treeNode}}</pre>
 <br/>
 <div class="container">
     <section>
-        <va-widget resource="{{treeNode.resources[0]}}"></va-widget>
+        <va-widget resource="{{treeNode.resources[0].link}}"></va-widget>
     </section>
 </div>
