fixed video playback

--- a/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
@@ -4,6 +4,6 @@
 <br/>
 <div class="container">
     <section>
-        <va-widget resource="{{treeNode.resources[0]}}"></va-widget>
+        <va-widget video-source="{{treeNode.resources[0].link}}" video-id="{{treeNode.resources[0]._id}}"></va-widget>
     </section>
 </div>
