add  concat  to va scripts

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -22,7 +22,7 @@
 </section>
 
 <!-- Main content -->
-<section class="content-course">
+<section class="content-node">
     <div class="box no-border" id="courseTabs">
         <div class="box-body no-border">
 
