--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -27,7 +27,7 @@
 <script src="/socket.io/socket.io.js"></script>
 
 
-<!-- Video Annotations specific scripts -->
+<!-- Video Annotations specific scripts
 <script src="/video-annotations/scripts/va-module.js"></script>
 <script src="/video-annotations/scripts/directives/va-annotation/va-annotation.js"></script>
 <script src="/video-annotations/scripts/directives/va-annotation/va-annotation-controller.js"></script>
@@ -35,6 +35,8 @@
 <script src="/video-annotations/scripts/directives/va-editor/va-editor-controller.js"></script>
 <script src="/video-annotations/scripts/directives/va-widget/va-widget.js"></script>
 <script src="/video-annotations/scripts/directives/va-widget/va-widget-controller.js"></script>
+-->
+<script src="/video-annotations/va.js"></script>
 
 <script src="/angular/courseMapper.js"></script>
 
