--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -650,10 +650,18 @@ a.videoButton:hover{
     width: 100%;
 }
 
-#preview .container {
+.content-course #preview .container {
     top: 0px;
     left: 0px;
     position: absolute;
+    padding: 20px;
+    background: transparent;
+    min-height: 120px;
+    width: 100%;
+    margin-right: 40px;
+}
+
+.content-node #preview .container {
     padding: 20px;
     background: transparent;
     min-height: 120px;
