--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -32,7 +32,12 @@
                           <div id="slideNavigationProgress"></div>
                           <div id="slideNavigation" class="row notSelectable" ng-cloak>
                             <div class="col-md-4 text-center"></div>
-                            <div class="col-md-4 text-center"><div class="row"><span class="glyphicon glyphicon-triangle-left iconSlideNav" aria-hidden="true" ng-click="changePageNumber(-1)"></span> <span id="slideNavText" class="fsSlideNav">{{currentPageNumber}}/{{maxPageNumber}}</span><span class="glyphicon glyphicon-triangle-right iconSlideNav" aria-hidden="true" ng-click="changePageNumber(1)"></span></div></div>
+                              <div class="col-md-4 text-center"><div class="row">
+                                <span class="glyphicon glyphicon-triangle-left iconSlideNav" aria-hidden="true" ng-click="changePageNumber(-1)"></span>
+                                <span id="slideNavText" class="fsSlideNav">{{currentPageNumber}}/{{maxPageNumber}}</span>
+                                <span class="glyphicon glyphicon-triangle-right iconSlideNav" aria-hidden="true" ng-click="changePageNumber(1)"></span>
+                              </div>
+                            </div>
                             <div class="col-md-4 text-right"><span class="glyphicon glyphicon-fullscreen iconSlideNav" aria-hidden="true"></span></div>
                           </div>
                         </div>
@@ -70,7 +75,8 @@
                              </div>
                              <div class="control-group">
                                <div class="controls">
-                                 <input type="hidden" class="form-control" id="author" name="author" placeholder="author" value= <%=currentUser.username%> >
+                                 <input type="hidden" class="form-control" id="author" name="author" value= <%=currentUser.username%> >
+                                 <input type="hidden" class="form-control" id="pageNumber" name="pageNumber" value= {{currentPageNumber}} >
                                </div>
                              </div>
                              <div class="control-group">
@@ -126,7 +132,8 @@
                           </div>
                           Filter by:
                           <div >
-                            <input id="filterValueText" ng-model="filtersRaw"></input>
+                            <input type="hidden" id="filterValueText" ng-model="filtersRaw"></input>
+                            <input type="hidden" id="pageFilter" ng-model="pageFilter" value = "{{currentPageNumber}}"></input>
                           </div>
                         </div>
                         <!--<div>
