facebook login works

--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -10,7 +10,16 @@
         <!-- Main content -->
         <section class="content">
             <div class="row row-centered">
-                <div class="col-xs-12 col-md-5 col-centered">
+                <div class="col-xs-12 col-md-6  ">
+
+                    <div class="box no-border">
+                        <div class="box-body no-border">
+                            <facebook-button></facebook-button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-centered">
+
                     <div class="box no-border">
                         <div class="box-body no-border">
                             <form action='/accounts/login' method="POST">
