--- a/views/admin-lte/profiles/editAccountModal.ejs
+++ b/views/admin-lte/profiles/editAccountModal.ejs
@@ -42,6 +42,19 @@
 
                                     <div class="control-group">
                                         <p></p>
+                                    <!-- Username -->
+                                    <label class="control-label" for="displayName">Display Name</label>
+                                    <p class="help-block">Display Name will be the name that will be displayed through out the site</p>
+
+                                    <div class="controls">
+                                        <input type="text" id="displayName" name="displayName" placeholder=""
+                                               class="form-control" ng-model="user.displayName">
+
+                                    </div>
+                                </div>
+
+                                    <div class="control-group">
+                                        <p></p>
                                         <!-- Password-->
                                         <label class="control-label" for="password">Old Password</label>
 
