--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -9,17 +9,12 @@
             <a class="top-menu-left visible-xs" data-toggle="offcanvas" role="button"><i class="ionicons ion-more"> </i>
             </a>
             <% } %>
-
-                <!--<a ngCloak ng-show="user" href="/course/create" class="top-menu-left">
-                    <i class="ionicons ion-android-create"></i>   <b>Create Course</b>
-                </a>-->
-
         </div>
         <!-- Navbar Right Menu -->
         <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" >
                 <!-- Messages: style can be found in dropdown.less-->
-                <li class="dropdown tasks-menu" ngCloak ng-hide="user">
+                <li class="dropdown tasks-menu" ng-cloak ng-hide="user">
                     <a style="cursor: pointer" class="dropdown-toggle" data-toggle="dropdown">
                         <b>Login</b>
                     </a>
@@ -43,19 +38,25 @@
                             </form>
 
                         </li>
+                        <li>
+                            <form class="form-signin">
+                            <facebook-button></facebook-button>
+                            </form>
+                        </li>
                     </ul>
                 </li>
-                <li ngCloak ng-hide="user">
+                <li ng-cloak ng-hide="user">
                     <a href="/accounts/signup">
                         <b>Sign Up</b>
                     </a>
                 </li>
 
-                <li class="dropdown user user-menu notifications-menu ng-hide" ng-show="user">
+                <li class="dropdown user user-menu notifications-menu" ng-show="user" ng-cloak>
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image"/>
                         <i ng-hide="user" class="fa fa-refresh fa-spin"></i>
-                        <span ng-show="user" class="hidden-xs ng-hide">{{user.username | capitalize:true}}</span>
+                        <span ng-show="user.username && !user.displayName" class="hidden-xs">{{user.username | capitalize:true}}</span>
+                        <span ng-show="user.displayName" class="hidden-xs">{{user.displayName | capitalize:true}}</span>
                     </a>
                     <ul class="dropdown-menu">
 
