--- a/views/admin-lte/signUp.ejs
+++ b/views/admin-lte/signUp.ejs
@@ -10,7 +10,20 @@
         <!-- Main content -->
         <section class="content">
             <div class="row row-centered">
-                <div class="col-xs-12 col-md-5 col-centered">
+                <div class="col-xs-12 col-md-6  ">
+                    <div class="box no-border">
+                        <div class="box-body no-border">
+                            <div class="control-group">
+                                <p class="help-block">User your facebook account to login</p>
+                                <a href="/api/accounts/login/facebook">
+                                    <img src="/admin-lte/images/fb.png">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-md-6 col-centered">
                     <div class="box no-border">
                         <div class="box-body no-border">
                             <form action='/accounts/signUp' method="POST">
@@ -74,6 +87,7 @@
                                         <!-- Button -->
                                         <div class="controls">
                                             <p class="help-block"></p>
+
                                             <p class="help-block"></p>
                                             <br class="clear">
                                             <button class="btn btn-lg btn-primary btn-block">Register</button>
