--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -1,9 +1,9 @@
 <script type="text/ng-template" id="actionBar-node-preview">
     <ul ng-controller="ActionBarController">
-        <li ng-show="isOwner">
+        <li ng-show="isNodeOwner">
             You created this content node
         </li>
-        <li ng-show="isOwner">
+        <li ng-show="isNodeOwner">
             <a style="cursor: pointer"
                data-toggle="modal" data-target="#editContentNodeModal"
                title="Edit this content node">
