moved user login to service

--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -5,7 +5,7 @@
     <% include mainMenu %>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper" ng-controller="MainMenuController">
+    <div class="content-wrapper" ng-controller="LoginPageController">
 
         <!-- Main content -->
         <section class="content">
