--- a/views/my-course/followingCourse.ejs
+++ b/views/my-course/followingCourse.ejs
@@ -2,7 +2,7 @@
 <script type="application/javascript" ng-src="/my-course/options.js"></script>
 
 
-        <div ng-controller="BeController" style="width:250px; height:250px">
+        <div style="width:250px; height:250px">
             <ul>
                 <li ng-repeat="cat in categories">
                     {{cat.name}}
