--- a/views/admin-lte/formLogin.ejs
+++ b/views/admin-lte/formLogin.ejs
@@ -47,7 +47,7 @@
         <div class="control-group">
             <!-- Button -->
             <div class="controls">
-                <button class="btn btn-primary btn-block">Login</button>
+                <button class="btn btn-primary btn-block">Login <spinner show="isLoading"></spinner></button>
             </div>
         </div>
     </fieldset>
