--- a/views/admin-lte/catalogs/editSubTopicModal.ejs
+++ b/views/admin-lte/catalogs/editSubTopicModal.ejs
@@ -41,12 +41,12 @@
                                     <!-- Button -->
                                     <div class="controls">
                                         <button class="btn btn-primary" ng-click="editSubTopicForm.$pristine=false">
-                                            <spinner show="isLoading"></spinner>
-                                            Save
+                                            Save <spinner show="isLoading"></spinner>
                                         </button>
                                         <button type="button" class="btn btn-warning"
                                                 data-dismiss="modal" aria-label="Close"
                                                 ng-click="cancel()">
+
                                             <span aria-hidden="true">Cancel</span>
                                         </button>
                                     </div>
