--- a/views/admin-lte/catalogs/addContentNodeModal.ejs
+++ b/views/admin-lte/catalogs/addContentNodeModal.ejs
@@ -1,5 +1,5 @@
 <!-- Main content -->
-<section class="content" ng-controller="NodeEditController" >
+<section class="content" ng-controller="NodeEditController">
     <div class="row row-centered">
         <div class="col-xs-12 col-md-5 col-centered">
             <div class="box no-border" ng-init="init()">
@@ -13,37 +13,52 @@
                 </div>
 
                 <div class="box-body no-border">
-                    <form class="" role="form" ng-submit="saveContentNode()">
+                    <form name="addContentNodeForm" role="form" ng-submit="saveContentNode(addContentNodeForm.$valid)"
+                          novalidate>
                         <fieldset>
                             <div class="control-group">
                                 <label class="control-label" for="name">{{currentNodeAction.typeText}} name</label>
-                                <p class="help-block">{{currentNodeAction.typeText}} name can contain any letters or numbers</p>
-                                <div class="controls">
+
+                                <p class="help-block">{{currentNodeAction.typeText}} name can contain any letters or
+                                    numbers</p>
+
+                                <div class="controls"
+                                     ng-class="{ 'has-error' : addContentNodeForm.name.$invalid && !addContentNodeForm.$pristine }">
                                     <input type="text" id="name" name="name" placeholder="" class="form-control"
-                                           ng-model="formData.name">
+                                           ng-model="formData.name"
+                                           required ng-required="true"
+                                            >
+
+                                    <p ng-show="addContentNodeForm.name.$invalid && !addContentNodeForm.$pristine"
+                                       class="help-block">Content Node Name is required.</p>
                                 </div>
                             </div>
-
+                            <br>
+                            <p class="help-block">Please attach at least a pdf or a video</p>
                             <div class="col-md-6" id="pdf">
                                 <div class="control-group">
-                                    <p></p>
-                                    <label class="control-label" for="pdf">Upload a PDF</label>
+                                    <label class="control-label" for="pdf">Upload PDF</label>
+
                                     <div class="controls">
                                         <div class="btn btn-sm btn-default"
                                              ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
-                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='100000000'><i class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file</div>
+                                             ng-model="filespdf" ngf-multiple="false" ngf-max-size='100000000'><i
+                                                class="fa fa-file-pdf-o"></i> &nbsp; Select a pdf file
+                                        </div>
                                         &nbsp; <span ng-repeat="f in filespdf">{{f.name}}</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6" id="video">
                                 <div class="control-group">
-                                    <p></p>
-                                    <label class="control-label" for="video">Upload Video File</label>
+                                    <label class="control-label" for="video">Upload Video</label>
+
                                     <div class="controls">
                                         <div class="btn btn-sm btn-default"
                                              ngf-select accept="video/*" ngf-accept="'video/*'"
-                                             ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i class="`"></i> &nbsp; Select a video file</div>
+                                             ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i
+                                                class="fa fa-file-video-o"></i> &nbsp; Select a video file
+                                        </div>
                                         &nbsp; <span ng-repeat="f in filesvideo">{{f.name}}</span>
                                     </div>
                                 </div>
@@ -51,15 +66,18 @@
 
                             <div class="control-group">
                                 <p class="help-block"></p>
+
                                 <p class="help-block"></p>
                                 <br class="clear">
 
                                 <div class="box-footer">
-                                    <span class="help-block" ng-show="errors">{{ errors }}</span>
+                                    <error-block ng-show="errors.length > 0" messages="errors"></error-block>
                                     <!-- Button -->
                                     <div class="controls">
-                                        <button class="btn btn-md btn-primary">Save</button>
-                                        <button type="button" class="btn btn-md btn-primary"
+                                        <button class="btn btn-primary" ng-click="addContentNodeForm.$setDirty()">Save
+                                            <spinner show="isLoading"></spinner>
+                                        </button>
+                                        <button type="button" class="btn btn-warning"
                                                 data-dismiss="modal" aria-label="Close"
                                                 ng-click="cancel()">
                                             <span aria-hidden="true">Cancel</span>
